# showbits

./: .gitignore  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
meta/: build-all  build-thermal-printer  build-thermal-printer-ui  build-typst-plugin  check  clean  clippy  dev-thermal-printer  dev-thermal-printer-ui  fmt
meta/spinch/: deploy  showbits-thermal-printer-tunnel.service  showbits-thermal-printer.service
showbits-assets/: Cargo.toml
showbits-assets/data/: egg.xcf
showbits-assets/eggs/good/: ei.kra
showbits-assets/src/: lib.rs
showbits-common/: Cargo.toml
showbits-common/src/: buffer.rs  color.rs  lib.rs  node.rs  rect.rs  render.rs  tree.rs  vec2.rs  view.rs  widget.rs  widgets.rs
showbits-common/src/widgets/: background.rs  block.rs  empty.rs  image.rs  text.rs  typst.rs
showbits-thermal-printer/: Cargo.toml  dist
showbits-thermal-printer-ui/: eslint.config.js  eslint.config.ts  index.html  package.json  photo.html  tsconfig.app.json  tsconfig.node.json  vite.config.ts
showbits-thermal-printer-ui/public/: fonts  photo.html
showbits-thermal-printer-ui/src/: App.vue  AppPhoto.vue  apiRequest.ts  index.ts  main.ts  photo.ts
showbits-thermal-printer-ui/src/components/: CDocumentBanner.vue  CDocumentCalendar.vue  CDocumentCatfishing.vue  CDocumentCells.vue  CDocumentChat.vue  CDocumentEgg.vue  CDocumentImage.vue  CDocumentSunrise.vue  CDocumentText.vue  CDocumentTictactoe.vue  CDocumentXkcd.vue  CError.vue  CPhotoButtonFlip.vue  CPhotoButtonGallery.vue  CPhotoButtonRecord.vue  CSegment.vue  CSegmentCalendar.vue  CSegmentCells.vue  CSegmentChat.vue  CSegmentEgg.vue  CSegmentImage.vue  CSegmentText.vue  CSegmentTictactoe.vue  CSelector.vue
showbits-thermal-printer-ui/src/lib/: assert.ts
showbits-thermal-printer/meta/: deploy-to-spinch  spinch-tunnel.service
showbits-thermal-printer/scripts/: euph_feed.py  twitch_feed.py
showbits-thermal-printer/src/: color.rs  command.rs  documents.rs  drawer.rs  main.rs  persistent_printer.rs  printer.rs  server.rs  util.rs
showbits-thermal-printer/src/documents/: lib.typ  plugin.wasm
showbits-thermal-printer/src/documents/banner/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/documents/calendar/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/documents/catfishing/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/documents/cells/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/documents/chat/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/documents/egg/: data.json  egg  egg_bad  eggs  main.typ  mod.rs  plugin.wasm
showbits-thermal-printer/src/documents/image/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/documents/lib/: main.typ  plugin.wasm
showbits-thermal-printer/src/documents/sunrise/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/documents/text/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/documents/tictactoe/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/documents/xkcd/: data.json  main.typ  mod.rs
showbits-thermal-printer/src/drawer/: backlog.rs  calendar.rs  cells.rs  chat_message.rs  egg.rs  image.rs  new_typst.rs  photo.rs  text.rs  tictactoe.rs  typst.rs
showbits-thermal-printer/src/server/: somehow.rs  static.rs  statuscode.rs
showbits-thermal-printer/static/: egg.html  image.html  index.html  photo.html  typst.html
showbits-typst/: Cargo.toml
showbits-typst-plugin/: Cargo.toml
showbits-typst-plugin/meta/: build  setup
showbits-typst-plugin/src/: lib.rs
showbits-typst/src/: lib.rs
