[workspace]
resolver = "3"
members = ["showbits-assets", "showbits-thermal-printer", "showbits-typst"]

[workspace.package]
version = "0.0.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive", "deprecated"] }
escpos = "0.16.0"
image = "0.25.6"
jiff = "0.2.15"
mime_guess = "2.0.5"
palette = "0.7.6"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
rust-embed = "8.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
showbits-assets.path = "./showbits-assets"
showbits-typst.path = "./showbits-typst"
sunrise = "2.1.0"
tokio = "1.47.1"
typst = "0.13.1"
typst-assets = { version = "0.13.1", features = ["fonts"] }
typst-kit = { version = "0.13.1", features = ["vendor-openssl"] }
typst-render = "0.13.1"

[workspace.dependencies.mark]
git = "https://github.com/Garmelon/mark.git"
rev = "2a862a69d69abc64ddd7eefd1e1ff3d05ce3b6e4"

[workspace.lints]
rust.unsafe_code = { level = "forbid", priority = 1 }
# Lint groups
rust.deprecated_safe = "warn"
rust.future_incompatible = "warn"
rust.keyword_idents = "warn"
rust.rust_2018_idioms = "warn"
rust.unused = "warn"
# Individual lints
rust.non_local_definitions = "warn"
rust.redundant_imports = "warn"
rust.redundant_lifetimes = "warn"
rust.single_use_lifetimes = "warn"
rust.unit_bindings = "warn"
rust.unused_crate_dependencies = "warn"
rust.unused_import_braces = "warn"
rust.unused_lifetimes = "warn"
rust.unused_qualifications = "warn"
# Clippy
clippy.use_self = "warn"

# Optimize dependencies in debug mode (mainly for faster image exports).
# Does not apply to workspace members, only "real" dependencies.
# https://doc.rust-lang.org/cargo/reference/profiles.html#overrides
[profile.dev.package."*"]
opt-level = 3
