[package]
name = "showbits-common"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
cosmic-text.workspace = true
image.workspace = true
mark.git = "https://github.com/Garmelon/mark.git"
palette.workspace = true
paste = "1.0.14"
showbits-assets.workspace = true
taffy.workspace = true

[lints]
workspace = true
