[package]
name = "showbits-common"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
comemo = { workspace = true }
cosmic-text = { workspace = true }
image = { workspace = true }
mark = { workspace = true }
palette = { workspace = true }
paste = { workspace = true }
showbits-assets = { workspace = true }
taffy = { workspace = true }
typst = { workspace = true }
typst-assets = { workspace = true }
typst-render = { workspace = true }

[lints]
workspace = true
