[package]
name = "showbits-thermal-printer"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
clap = { workspace = true }
escpos = { workspace = true }
image = { workspace = true }
mime_guess = { workspace = true }
palette = { workspace = true }
rand = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }
showbits-assets = { workspace = true }
showbits-common = { workspace = true }
taffy = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
