[package]
name = "showbits-typst-plugin"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies.wasm-minimal-protocol]
git = "https://github.com/astrale-sharp/wasm-minimal-protocol.git"
rev = "90336ebf2d99844fd8f8e99ea7096af96526cbf4"

[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary*
opt-level = 'z'   # Optimize for size
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic

[lints]
workspace = true
