[package]
name = "showbits-typst-plugin"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dependencies]
image = { workspace = true, features = ["png"] }
mark = { workspace = true }
palette = { workspace = true }
wasm-minimal-protocol = { workspace = true }

[profile.release]
lto = true        # Enable link-time optimization
strip = true      # Strip symbols from binary*
opt-level = 'z'   # Optimize for size
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic

[lints]
workspace = true
