[package]
name = "showbits-typst"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.139"
typst = { workspace = true }
typst-assets = { workspace = true }
typst-render = { workspace = true }

[lints]
workspace = true
